--- a/src/Main.form
+++ b/src/Main.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="contentPane" default-binding="true" layout-manager="GridBagLayout">
     <constraints>
       <xy x="44" y="43" width="406" height="400"/>
     </constraints>
@@ -31,14 +31,14 @@
           <text value="Restart"/>
         </properties>
       </component>
-      <component id="f7ce5" class="RaceTimer" binding="Clock">
+      <component id="f7ce5" class="RaceTimer" binding="raceTimer">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
-      <component id="fa297" class="WPMCounter" binding="Counter">
+      <component id="fa297" class="WpmCounter" binding="wpmCounter">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
